# bashckup

./: .gitignore  LICENSE  README.md  TODO.md  build.sh  publish.sh  pyproject.toml
.github/: run-test.sh  test-pipeline.sh
.github/images/: build-debian10.sh  build-debian11.sh  custom-mariadb.cnf  database.sql  rsyncd.conf
.github/images/debian10/: Dockerfile
.github/images/debian11/: Dockerfile  lsb-release
.github/workflows/: Dockerfile  build-image.sh  database.sql  docker-images.yml  test.yml
bashckup/: bashckup.py
bashckup/actuators/: actuators.py  actuators_factories.py  exceptions.py  post_backup.py  readers.py  transformers.py  writers.py
src/actuators/: actuators.py  actuators_factories.py  exceptions.py  post_backup.py  readers.py  transformers.py  writers.py
src/bashckup/: bashckup.py
src/bashckup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  scenarios.py  test_read_file.py  test_scenarios.py
tests/confs/: crypt-password.pwd  mariadb-gz.yml  tar-clean.yml  tar-crypt.yml  tar-diff-clean.yml  tar-diff.yml  tar-gz-clean.yml  tar-gz.yml  tar-rsync.yml  tar.yml
tests/expected/: sqlDump.sql
tests/files/: 2023-07-09T12:03:34-tar-snap-w28.snar
tests/resources/confs/: mariadb-gz.yml  mariadb.yml  tar-clean.yml  tar-crypt.yml  tar-diff-clean.yml  tar-diff.yml  tar-gz.yml  tar-rsync.yml  tar.yml
tests/resources/mariadb/: 2023-07-10T15:02:10-mariadb.sql  sqlDump.sql
tests/resources/tar/: 2023-07-09T12:03:34-tar-diff.tar  2023-07-10T15:02:10-tar.tar  2023-07-10T15:02:12-unknownBackup.tar
tests/resources/tar/differential/: 2023-07-09T12:03:34-tar-diff.tar  2023-07-10T15:02:10-tar-diff.tar
tests/scenarios/: test_clean.py  test_crypt.py  test_gzip.py  test_logging.py  test_mariadb.py  test_rsync.py  test_run.py  test_tar.py
tests/scenarios/backup/: test_clean.py  test_crypt.py  test_gzip.py  test_logging.py  test_mariadb.py  test_output_file.py  test_rsync.py  test_run.py  test_tar.py
tests/scenarios/restore/: test_mariadb.py  test_tar.py
tests/ut/: test_read_file.py
(+1 files in other folders)
