[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "bashckup"
version = "0.1.0"
authors = [
    { name = "Rémi Angénieux" },
]
description = "Defines your backup strategy based on bash commands"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "PyYAML",
    "jsonschema"
]
license.file = "LICENSE"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Development Status :: 3 - Alpha",
    "Topic :: System :: Archiving :: Backup"
]

[project.scripts]
bashckup = "bashckup.bashckup:main"

[project.optional-dependencies]
tests = [
    'assertpy',
    'freezegun',
    'pytest',
    'pytest-cov'
]

[project.urls]
"Homepage" = "https://github.com/remi-angenieux/bashckup"
"Bug Tracker" = "https://github.com/remi-angenieux/bashckup/issues"